<resources>
    <string name="app_name" translatable="false">User</string>

    <string name="muchomuchotexto" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis molestie mollis turpis, posuere sagittis dolor. Pellentesque tincidunt felis lacus, vitae sagittis sapien imperdiet ut. Vestibulum consectetur felis diam, ut commodo eros vulputate eu. Nulla porttitor mi risus, ut porta turpis condimentum et. Integer gravida luctus magna, finibus accumsan diam facilisis in. Sed placerat, massa et imperdiet rhoncus, sapien est elementum nulla, facilisis interdum enim ligula vel ex. Morbi vehicula lectus et urna malesuada tristique. Cras mattis, est ac tempus hendrerit, quam lectus fringilla lacus, nec vehicula sem ipsum ac dolor.

        Maecenas facilisis tincidunt nisi, a ullamcorper purus pretium ac. Pellentesque eros mauris, vehicula ut volutpat ac, posuere in magna. Etiam ut mattis arcu. Mauris pellentesque pulvinar neque, sed egestas augue fermentum sed. Sed vitae magna eu justo egestas pulvinar. Suspendisse orci ligula, tincidunt quis vulputate ac, consequat a magna. Donec commodo fringilla purus id aliquet. Vestibulum risus velit, efficitur non erat a, maximus posuere sapien. Etiam consequat suscipit purus. Sed sed magna sapien.
    </string>


    <!--ACCOUNT ACTIVITY-->

    <string name="welcome_message">Hola,</string>
    <string name="username">Nombre de Usuario</string>
    <string name="profile_data">Datos de Perfil</string>
    <string name="history">Historial</string>
    <string name="payment_methods">Métodos de Pago</string>
    <string name="account_title">Mi Cuenta</string>
    <string name="language">Idioma</string>
    <string name="spanish">Español</string>
    <string name="progress_suggestions">Progreso y Sugerencias</string>
    <string name="information">Información</string>
    <string name="terms_conditions">Términos y Condiciones</string>
    <string name="customer_support">Ayuda al Cliente</string>
    <string name="logout">Cerrar Sesión</string>

    <!--LOG IN ACTIVITY-->

    <string name="login_title">Iniciar Sesión</string>
    <string name="email_label">Correo electrónico</string>
    <string name="password_label">Contraseña</string>
    <string name="register_prompt">¿No tienes cuenta?</string>
    <string name="register_text">Regístrate</string>
    <string name="lostPass"><u>Olvidé mi contraseña</u></string>

    <!-- Texto de los botones e iconos -->
    <string name="login_button_text">Iniciar Sesión</string>

    <!-- Texto de los campos de texto -->
    <string name="email_hint">Introduce tu correo electrónico</string>
    <string name="password_hint">Introduce tu contraseña</string>

    <!--HOME ACTIVITY-->

    <string name="bebidas_destacadas_mes">Bebidas Destacadas del Mes</string>
    <string name="ofertas_promociones">Ofertas y Promociones</string>


    <!--CUSTOM DIALOG LANGUAGE ACTIVITY-->

    <string name="dialog_title">Idioma</string>
    <string name="dialog_message">Seleccione el idioma:</string>
    <string name="radio_espanol">Español</string>
    <string name="radio_ingles">English</string>
    <string name="dialog_message_restart">(Reinicie la aplicación para aplicar los cambios)</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_cancelar">Cancelar</string>


    <!--CUSTOM DIALOG CALL ACTIVITY-->

    <string name="dialog_titlecall">Atención al Cliente</string>
    <string name="dialog_messagecall">Comuníquese con un profesional</string>
    <string name="dialog_continue">¿Desea llamar?</string>
    <string name="btn_call">Llamar</string>
    <string name="btn_cancel">Cancelar</string>

    <!--CUSTOM DIALOG RESTABLECER ACTIVITY-->

    <string name="dialog_titlepass">Restablecer contraseña</string>
    <string name="dialog_message1">Nueva contraseña</string>
    <string name="dialog_message2">Confirmar contraseña</string>
    <string name="btn_respass">Restablecer</string>
    <string name="btn_cancelpass">Cancelar</string>

    <string name="mensaje_pass_notequal">La contraseña no coincide</string>

    <!--CUSTOM DIALOG RESTABLECER LOGIN ACTIVITY-->

    <string name="dialog_titlelogin">¿Olvidaste tu contraseña?</string>
    <string name="dialog_message1login">Ingresa el correo electrónico asociado a tu cuenta</string>
    <string name="dialog_message2login">Te enviaremos un correo con una contraseña temporal para que puedas acceder a tu cuenta</string>
    <string name="reset_passwordlogin">Enviar contraseña temporal</string>
    <string name="btn_backlogin">Volver</string>


    <!--DATOS PERFIL ACTIVITY-->

    <string name="profile_dataACT">Datos de Perfil</string>
    <string name="account">Cuenta</string>
    <string name="name">Nombre</string>
    <string name="lastname">Apellido</string>
    <string name="usernameACT">Username</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="reset_password">Reestablecer</string>
    <string name="save">Guardar</string>
    <string name="informationACT">Información</string>
    <string name="user_measurements">Medidas del Usuario</string>
    <string name="delete_account">Eliminar cuenta de BoostUp</string>


    <!--showDeleteAccountDialog-->

    <string name="delete_account_title">Eliminar Cuenta</string>
    <string name="delete_account_message">Al eliminar su cuenta perderá la información de su progreso y el saldo vigente.</string>
    <string name="continue_question">¿Desea continuar?</string>
    <string name="delete_button">Eliminar cuenta</string>
    <string name="cancel_button">Cancelar</string>

    <!--medidas_edit_activity-->

    <string name="body_measurements_title">Medidas Corporales</string>
    <string name="update_measurements_prompt">Actualiza tus medidas</string>
    <string name="weight_label">Peso</string>
    <string name="height_label">Talla (Altura)</string>
    <string name="waist_label">Cintura</string>
    <string name="hips_label">Cadera</string>
    <string name="arm_circumference_label">Circunferencia de brazo</string>
    <string name="unit_kg">kg</string>
    <string name="unit_cm">cm</string>
    <string name="save_button">Guardar</string>

    <!--CREAR PEDIDO ACTIVITY-->

    <string name="product_name">Bebida Username</string>
    <string name="choose_protein">Elige tu Proteína:</string>
    <string name="choose_flavor">Elige tu Saborizante:</string>
    <string name="choose_curcuma_ginger">Cúrcuma y Jengibre:</string>
    <string name="go_to_pay">Ir a pagar</string>


    <!--CUSTOM DIALOG QR-->

    <string name="qr_title">Use este QR para canjear su bebida</string>

    <!--CATALOGO DE PREODUCTOS-->

    <string name="back_description">Regresar</string>
    <string name="search_hint">Buscar</string>
    <string name="search_description">Buscar</string>
    <string name="catalog_title">Catálogo de Productos</string>
    <string name="filter_proteins">Proteínas</string>
    <string name="filter_flavorings">Saborizantes</string>
    <string name="filter_turmeric">Cúrcuma y Jengibre</string>
    <string name="filter_animal_origin">Origen animal</string>
    <string name="filter_plant_origin">Origen vegetal</string>

    <!--ITEM PRODUCTO-->

    <string name="product_description">Descripción</string>
    <string name="view_details">Ver detalles</string>


    <!--HISTORIAL ACTIVITY-->

    <string name="product_history">Historial de Pedidos</string>


</resources>