<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dialog_titlepass"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="36dp" />

    <TextView
        android:id="@+id/dialog_message1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/dialog_message1"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/ET_pass1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/et_holder_gray_rectangle"
        android:ems="10"
        android:inputType="text|textPassword"
        android:paddingLeft="16dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp" />

    <TextView
        android:id="@+id/dialog_message2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/dialog_message2"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/ET_pass2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/et_holder_gray_rectangle"
        android:ems="10"
        android:inputType="text|textPassword"
        android:paddingLeft="16dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp" />

    <TextView
        android:id="@+id/TV_numero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:visibility="gone"
        android:text="523331179846"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_respass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/orange"
        android:text="@string/btn_respass"
        android:textColor="@android:color/white"
         />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:text="@string/btn_cancel"
        android:textColor="@color/black" />

</LinearLayout>
