<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:padding="10dp"
    tools:context=".Activity.login_activity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:layout_gravity="center"
            android:background="@drawable/btn_holder_blue"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:srcCompat="@drawable/logo" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_holder_blue"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/login_title"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/email_label"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ET_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_holder_gray"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/password_label"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ET_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_holder_gray"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="39dp" />

        <ImageButton
            android:id="@+id/btn_next"
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:layout_gravity="center"
            android:background="@drawable/custom_btn_orange"
            android:elevation="4dp"
            android:padding="10dp"
            android:scaleType="center"
            android:src="@drawable/next_icon" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_prompt" />

        <TextView
            android:id="@+id/TV_registarte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="8dp"
            android:text="@string/register_text"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>