<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.medidas_edit_activity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@color/base_gray"
        android:orientation="vertical"
        android:paddingLeft="38dp"
        android:paddingTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/back_act_icon" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/body_measurements_title"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="14dp"
            android:text="@string/update_measurements_prompt"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:paddingLeft="38dp"
        android:paddingTop="48dp"
        android:paddingRight="38dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="8dp"
            android:text="@string/weight_label"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ET_name"
                android:layout_width="302dp"
                android:layout_height="wrap_content"
                android:background="@drawable/et_holder_gray_rectangle"
                android:ems="10"
                android:inputType="number"
                android:paddingLeft="16dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                />

            <TextView
                android:id="@+id/TV_uPeso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="kg"
                android:textAlignment="textEnd"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="8dp"
            android:text="@string/height_label"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ET_lastname"
                android:layout_width="302dp"
                android:layout_height="wrap_content"
                android:background="@drawable/et_holder_gray_rectangle"
                android:ems="10"
                android:inputType="number"
                android:paddingLeft="16dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp" />

            <TextView
                android:id="@+id/TV_uTalla"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="cm"
                android:textAlignment="textEnd"
                android:textStyle="bold" />


        </LinearLayout>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="8dp"

            android:text="@string/waist_label"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ET_newusername"
                android:layout_width="302dp"
                android:layout_height="wrap_content"
                android:background="@drawable/et_holder_gray_rectangle"
                android:ems="10"
                android:inputType="number"
                android:paddingLeft="16dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp" />

            <TextView
                android:id="@+id/TV_ucintura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="cm"
                android:textAlignment="textEnd"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewcadera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="8dp"

            android:text="@string/hips_label"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ET_cadera"
                android:layout_width="302dp"
                android:layout_height="wrap_content"
                android:background="@drawable/et_holder_gray_rectangle"
                android:ems="10"
                android:inputType="number"
                android:paddingLeft="16dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp" />

            <TextView
                android:id="@+id/TV_ucadera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="cm"
                android:textAlignment="textEnd"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewbrazo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="8dp"

            android:text="@string/arm_circumference_label"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ET_cbrazo"
                android:layout_width="302dp"
                android:layout_height="wrap_content"
                android:background="@drawable/et_holder_gray_rectangle"
                android:ems="10"
                android:inputType="number"
                android:paddingLeft="16dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp" />

            <TextView
                android:id="@+id/TV_ubrazo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="cm"
                android:textAlignment="textEnd"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_guardarmedidas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/orange"
            android:text="@string/btn_guardar" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>